# lmux

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/update-pricing/: SKILL.md
.claude/skills/: update-pricing
.github/workflows/: ci.yml  publish.yml
scripts/: update_azure_foundry_pricing.py  update_bedrock_pricing.py  update_vertex_pricing.py  validate_pricing.py
